Fixes #20 general clean-up of ordering global files Started jump-nav component, might need to refactor style prototype to match naming fonts had duplicated styles scaffold became obsolete some styles moved to text, base and box-model bs variables documented

--- a/source/src_scss/atoms/text/_text.scss
+++ b/source/src_scss/atoms/text/_text.scss
@@ -1,3 +1,17 @@
+.font-secondary {
+    font-family: $font-secondary;
+}
+
+.font-small {
+    font-size: 0.8em;
+}
+
+body {
+    font-family: $font;
+}
+
+
+
 .font-default{
   font-family: $font;
   font-weight: normal;
