--- a/source/src_scss/global/_base.scss
+++ b/source/src_scss/global/_base.scss
@@ -8,11 +8,46 @@
 ////////////////////////
 // Private Imports
 ////////////////////////
+
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+.visually-hidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
+.position-relative {
+    position: relative;
+}
+
+body{
+  font-family: $font;
+  color: #222;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
+
+}
+
+
 @import "extendables";
-@import "misc";
 @import "backgrounds";
 @import "borders";
 @import "box-model";
 @import "colors";
-@import "misplaced";
-  
